<resources>
    <string name="app_name">TasksAndProjectsManager</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">"Sign in"</string>
    <string name="register">"Don't have an account yet? Sign up!"</string>
    <string name="address">Email</string>
    <string name="nickname">Username</string>
</resources>