<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/register_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Registration"
        android:padding="16dp"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="@color/dark_purple"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nickname_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColorHint="@color/light_purple"
        app:boxStrokeColor="@color/dark_purple"
        app:hintTextColor="@color/dark_purple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_title"
        app:layout_constraintWidth_percent="0.85">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nickname"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/nickname"
            android:inputType="text"
            android:textColor="@color/dark_purple"
            android:textColorHint="@color/dark_purple"
            android:lines="1"
            android:gravity="center_vertical"
            android:paddingVertical="8dp"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/address_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/nickname_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.85"
        app:boxStrokeColor="@color/dark_purple"
        app:hintTextColor="@color/dark_purple"
        android:textColorHint="@color/light_purple"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/address"
            android:inputType="text"
            android:textColor="@color/dark_purple"
            android:textColorHint="@color/dark_purple"
            android:lines="1"
            android:gravity="center_vertical"
            android:paddingVertical="8dp"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/address_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.85"
        app:passwordToggleEnabled="true"
        app:boxStrokeColor="@color/dark_purple"
        app:hintTextColor="@color/dark_purple"
        android:textColorHint="@color/light_purple"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/password"
            android:textColor="@color/dark_purple"
            android:inputType="textPassword"
            android:textColorHint="@color/dark_purple"
            android:lines="1"
            android:gravity="center_vertical"
            android:paddingVertical="8dp"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/register_button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:text="Sign up"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:cornerRadius="30dp"
        android:layout_marginTop="40dp"
        app:backgroundTint="@null"
        android:background="@drawable/login_button_background"
        android:backgroundTint="@color/dark_purple"
        app:layout_constraintTop_toBottomOf="@id/password_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.85" />

</androidx.constraintlayout.widget.ConstraintLayout>